Fix section width calculation and scrollbar jumps
- Set column width/count in JS instead of CSS
- Take column count into account in calculations
- Fix calculating section left and right edge
- Delay section width calculation to allow time for browser to lay out text

--- a/src/styles/_book.scss
+++ b/src/styles/_book.scss
@@ -95,21 +95,8 @@ nr-book {
                 position: absolute;
                 line-height: 2.2rem;
                 font-size: 1.1rem;
-                // For small screens, use one column layout
-                column-gap: $column-gap;
-                column-count: 1;
-                column-width: 100vw;
                 column-fill: auto;
-
-                @include media-breakpoint-up(lg) {
-                    @each $breakpoint in map-keys($container-max-widths) {
-                        @include media-breakpoint-up($breakpoint) {
-                            column-gap: $column-gap;
-                            column-count: 2;
-                            column-width: auto;
-                        }
-                    }
-                }
+                /* Other column properties are managed in JS */
 
                 img {
                     max-width: calc(100% - 2 * #{$book-padding});
