--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,7 +24,6 @@ $bg-book-fold: darken($bg-book, 10%);
 $text-book: #000;
 $spacing-bottom: 30px;
 $book-progress-height: 20px;
-$column-gap: 60px;
 $book-padding: 20px;
 $book-padding-top: 10px;
 $book-padding-bottom: 10px;
